# FailureCriteria

./: .gitignore  CMakeLists.txt  INSTALL.md  README.md  clean.sh
docs/web/: CMakeLists.txt  analysis_python.md  bibliography.bib  contributing.md  contributors.md  index.md  install.md  mfm-template.html  tests.md
docs/web/castem/: ant10_tensile.dgibi  ct20.med  ct20_2d.med  nt2_10.med  test1.dgibi  test1.mfront
docs/web/python/: test1.py  testBakkerKoers1991.py  testForgetMariniVincent2016.py  testFreudenthal1950.py  testGeneralizedHancockMcKenzie.py  testGeneralizedHuang.py  testHoheHardenackeLuckowSiegele2010ExponentialLaw.py  testHuang1991.py  testJohnsonCook1985.py  testRiceTracey1969HighStressTriaxiality.py  testRuggieriDodds2015.py
src/: BrittleFractureProbability_BakkerKoers1991.mfront  BrittleFractureProbability_Beremin1983.mfront  BrittleFractureProbability_BordetKarstensenKnowlesWiesner2005.mfront  BrittleFractureProbability_ForgetMariniVincent2016.mfront  BrittleFractureProbability_HoheHardenackeLuckowSiegele2010ExponentialLaw.mfront  BrittleFractureProbability_HoheHardenackeLuckowSiegele2010PowerLaw.mfront  BrittleFractureProbability_KroonFaleskog2002.mfront  BrittleFractureProbability_RuggieriDodds2015.mfront  CMakeLists.txt  DuctileDamageIndicator_BaiWierzbicki2010.mfront  DuctileDamageIndicator_CockcroftLatham1968.mfront  DuctileDamageIndicator_Freudenthal1950.mfront  DuctileDamageIndicator_GeneralizedHancockMcKenzie.mfront  DuctileDamageIndicator_GeneralizedHuang.mfront  DuctileDamageIndicator_GeneralizedRiceTracey.mfront  FailureCriteria.py  (+5 more)
(+246 files in other folders)
